--- a/style.css
+++ b/style.css
@@ -1,30 +1,44 @@
 body{
-    margin: 0;
-    width: 100vw;
-    height: 100vh;
+  font-size: 14px;
+  width: 1000px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+
+nav ul{
+  background-color: #aaf;
+  list-style: none;
+  display: flex;
 }
-header{
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: midnightblue;
+
+nav li{
+  background-color: #55f;
+  margin-right: 2px;
+  color: #fff;
+  font-weight: bold;
+  padding: 4px 20px;
+
 }
-.title{
-    font-size: x-large;
-    color: rgb(240, 245, 247);
+#topgazo{
+  background: url(topgazo.jpg) no-repeat center center;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
 }
-main{
-    flex-grow: 1;
+
+#topinfo{
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 500px;
+  height: 150px;
+  position: relative;
+  top: 290px;
+  left: 450px;
+  padding: 20px 10px;
 }
-footer{
-    height: 25px;
-    text-align: right;
-    background-color: midnightblue;
-    color: rgb(240, 245, 247);
+
+h3{
+  border-left: 20px solid #55f;
+  border-bottom: 2px solid #55f;
+  padding-left: 10px;
 }
